--- a/css/index.css
+++ b/css/index.css
@@ -1,83 +1,62 @@
 @import url('https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap');
 
-.wrapper {
+body {
     display: flex;
-    margin: 90px;
-}
 
+}
 .a {
-    color: white;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
     background: -webkit-linear-gradient(top, rgba(169,3,41,1) 0%, rgba(143,127,131,1) 100%);
-    height: 400px;
-    width: 200px;
+    height: 565x;
+    width: 125px;
     padding: 70px;
-    text-align: center;
 }
 
-
- .r { 
-     color: white;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
-    background: -webkit-linear-gradient(bottom, rgba(235,233,249,1) 0%, rgba(48,11,214,1) 0%, rgba(216,208,239,1) 100%);
-    height: 400px;
-    width: 200px;
+.r {
+    background: -webkit-linear-gradient(bottom, rgba(235,233,249,1) 0%, rgba(48,11,214,1) 0%, rgba(216,208,239,1) 100%);    
+    height: 565px;
+    width: 125px;
     padding: 70px;
-    text-align: center;
 }
 
 .s {
-    color: white;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
-    background: -webkit-linear-gradient(top, rgba(255,234,0,1) 35%, rgba(255,234,0,1) 42%, rgba(176,241,9,1) 60%, rgba(0,255,30,1) 100%); 
-    height: 400px;
-    width: 200px;
+    background: -webkit-linear-gradient(top, rgba(255,234,0,1) 35%, rgba(255,234,0,1) 42%, rgba(176,241,9,1) 60%, rgba(0,255,30,1) 100%);
+    height: 565px;
+    width: 125px;
     padding: 70px;
-    text-align: center;
 }
 
 .e {
-    color: white;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
     background: -webkit-linear-gradient(top, rgba(0,14,166,1) 0%, rgba(0,14,166,1) 23%, rgba(219,54,164,1) 75%, rgba(219,54,164,1) 100%);
-    height: 400px;
-    width: 200px;
+    height: 565px;
+    width: 125px;
     padding: 70px;
-    text-align: center;
 }
 
 .n {
-    color: white;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
-    background: -webkit-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(169,171,186,1) 100%);    height: 400px;
-    width: 200px;
+    background: -webkit-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(169,171,186,1) 100%);
+    height: 565px;
+    width: 125px;
     padding: 70px;
-    text-align: center;
 }
 
 .a2 {
-    color: white;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
     background: -webkit-linear-gradient(top, rgba(216,225,231,1) 0%, rgba(242,246,248,1) 48%, rgba(168,189,11,1) 100%);
-    height: 400px;
-    width: 200px;
+    height: 565px;
+    width: 125px;
     padding: 70px;
-    
 }
 
 .l {
-    color: white;
-    text-align: center;
-    font-size: 4rem;
-    font-family: 'Ibarra Real Nova', serif;
-    background: -webkit-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(58,15,122,1) 0%, rgba(232,69,69,1) 86%, rgba(232,69,69,1) 100%);
-    height: 400px;
-    width: 200px;
+    background: -webkit-linear-gradient(top, rgba(179,220,237,1) 0%, rgba(58,15,122,1) 0%, rgba(232,69,69,1) 86%, rgba(232,69,69,1) 100%);    
+    height: 565px;
+    width: 135px;
     padding: 70px;
+}
+
+p {
+    color: white;
+    font-family: 'Ibarra Real Nova', serif;
+    font-size: 4rem;
+    text-align: center;
+    padding: 150px 0px 0px 0px;
 }
